<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/hellowrd"
        android:textAlignment="center"
        android:textSize="20dp">
    </TextView>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/etName"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nameHint"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
        </EditText>
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/etLogin"
            android:layout_gravity="center_horizontal"
            android:hint="@string/loginHint"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
        </EditText>
        <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passwordHint"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:inputType="textPassword">
        </EditText>
        <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAdd"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/add"
            style="@style/Widget.AppCompat.Button.Colored">
        </Button>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnViewAll"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="20dp"
            android:text="@string/viewAll"
            style="@style/Widget.AppCompat.Button.Colored">
        </Button>
    </LinearLayout>
</LinearLayout>
</LinearLayout>