<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/ListIDTextMarginTop"
            android:hint="@string/id"
            android:textSize="@dimen/ListTextSize"
            android:layout_toRightOf="@id/tvName"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="@dimen/ListTextWidth"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:hint="@string/nameHint"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/ListTextSize">

        </TextView>

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="@dimen/ListTextWidth"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_alignParentLeft="true"
            android:hint="@string/loginHint"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/ListTextSize">

        </TextView>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="@dimen/ListTextWidth"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLogin"
            android:hint="@string/passwordHint"
            android:layout_alignParentLeft="true"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/ListTextSize">

        </TextView>

        <CheckBox
            android:id="@+id/chkPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPassword"
            android:textSize="@dimen/ChkBxTexSize"
            android:text="@string/ShowPass">

        </CheckBox>

    </RelativeLayout>
</LinearLayout>