<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:scaleType="center"
        android:background="#008577"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/dialogName"
        android:inputType="textEmailAddress"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:hint="@string/nameHint" />
    <EditText
        android:id="@+id/dialogLogin"
        android:inputType="textPassword"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/loginHint"/>
    <EditText
        android:id="@+id/dialogPassword"
        android:inputType="textPassword"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:fontFamily="sans-serif"
        android:hint="@string/loginHint"/>
</LinearLayout>